--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,12 +1,10 @@
 #homepage
   %section#main
     .row
-      %h1 Currently under construction!
-      %h4.subheader 
-        My portfolio is now a work in progress rails app. <br/>
-        Please do not mind all of the free space. Check back for updates! I'll be adding:
-      %ul
-        %li Personal Blog
-        %li Interface to upload portfolio projects
-        %li Dynamic resume fields integrated with linkedin
-      %p.signup <a href="mailto:bruce.mcelroy@gmail.com"> Please email for questions </a>
+      %h1 Front End Web Developer &amp; Designer
+      %p
+        I am located in Pittsburgh, PA currently learning Ruby on Rails. I have experience in most current frameworks including bootstrap, foundation and the semantic grid system.
+      = link_to "Hire me today", contact_path, {:class => "button depth"}
+  %section#portfolio
+    .row
+      %h2 Cool Stuff
