--- a/app/assets/stylesheets/globals/_mixins.css.scss
+++ b/app/assets/stylesheets/globals/_mixins.css.scss
@@ -1,4 +1,11 @@
 
+// Breakpoint
+@mixin breakpoint () {
+  @media screen and (min-width: $breakpoint) { @content }
+}
+
+
+
 // clearfix
 @mixin clearfix() { *zoom:1;
   &:before, &:after { content: " "; display: table; }
