--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,8 @@
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0, maximum-scale=1.0" }
     %meta{:name => "description", :content => "Bruce McElroy is a Front End Web Designer located in Pittsburgh, PA and currently learning Ruby on Rails." }
     %title Bruce McElroy | Front End Web Designer | Pittsburgh
+    %link{href: "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css", rel: "stylesheet"}/
+    %link{href: "//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css", rel: "stylesheet"}/
     = stylesheet_link_tag  "application", media: "all", "data-turbolinks-track" => true
     = csrf_meta_tags
     - if Rails.env.production?
@@ -17,8 +19,7 @@
         ga('send', 'pageview');
   %body
     = render 'layouts/includes/nav'
-    .main-container
-      = yield
+    = yield
     = render 'layouts/includes/footer'
     = javascript_include_tag "application", "data-turbolinks-track" => true
     :javascript
