--- a/app/assets/stylesheets/globals/_variables.css.scss
+++ b/app/assets/stylesheets/globals/_variables.css.scss
@@ -25,7 +25,7 @@ $lightGrey:#fbfbfb !default;
 $orange:rgb(229, 144, 26);
 
 // Navigation
-$headerHeight:8rem;
+$headerHeight:auto;
 
 
 // Font Settings
