--- a/app/views/layouts/includes/_footer.html.haml
+++ b/app/views/layouts/includes/_footer.html.haml
@@ -1,17 +1,18 @@
 #footer
   %footer 
     .row
-      = link_to(image_tag("logo-footer.svg", :alt => "Bruce McElroy Logo", :rel => "logo"), root_path)
-      %p My goal is to provide you with a service as a front end web developer that exceeds your expectations in a timely fashion.
-      %a{:href => "https://www.facebook.com/bruce.a.mcelroy"}
-        %i.icon-facebook-sign
-      %a{:href => "https://github.com/visualbam"}
-        %i.icon-github-sign
-      %a{:href => "http://www.linkedin.com/in/brucemcelroy"}
-        %i.icon-linkedin-sign
-      %a{:href => "http://instagram.com/visualbam"}
-        %i.icon-twitter-sign
-    .row
+      %div
+        / = link_to(image_tag("logo-footer.svg", :alt => "Bruce McElroy Logo", :rel => "logo"), root_path)
+        = image_tag("logo-footer.svg", :alt => "Bruce McElroy Logo", :rel => "logo")
+        %p My goal is to provide you with a service as a front end web developer that exceeds your expectations in a timely fashion. 
+        %a{:href => "https://www.facebook.com/bruce.a.mcelroy", :target => "_blank", :title => "Facebook-social"}
+          %i.icon-facebook-sign
+        %a{:href => "https://github.com/visualbam", :target => "_blank", :title => "Facebook-social"}
+          %i.icon-github-sign
+        %a{:href => "http://www.linkedin.com/in/brucemcelroy", :target => "_blank", :title => "Facebook-social"}
+          %i.icon-linkedin-sign
+        %a{:href => "http://instagram.com/visualbam", :target => "_blank", :title => "Facebook-social"}
+          %i.icon-twitter-sign
       %div
         %h6 Web design blogs for inspiriation —
         %a{:href => "http://www.webdesignerdepot.com", :target => "_blank"} Web Designer Depot
@@ -21,6 +22,6 @@
       %div
         %h6 Tell me what you think!
         %p The suggestion form will be here soon!
-.copyright
-  .row
-    %p © 2013 Bruce McElroy,   All Rights Reserved  
+/ .copyright
+/   .row
+/     %p © 2013 Bruce McElroy,   All Rights Reserved  
