--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,10 +1,14 @@
-#homepage
-  %section#main
+#home
+  %section
     .row
       %h1 Front End Web Developer &amp; Designer
       %p
         I am located in Pittsburgh, PA currently learning Ruby on Rails. I have experience in most current frameworks including bootstrap, foundation and the semantic grid system.
       = link_to "Hire me today", contact_path, {:class => "button depth"}
-  %section#portfolio
+  %section
     .row
-      %h2 Cool Stuff
+      = image_tag("center.png")
+      %h2 Development &amp; Design
+      %p 
+        Coming from a design background with development experience I excel in user interface design and current web trends. I am located in Pittsburgh, PA currently learning Ruby on Rails. I have experience in most current frameworks.
+      = link_to "I'm your next asset", contact_path, {:class => "button depth"}
