--- a/app/assets/stylesheets/globals/_grid.css.scss
+++ b/app/assets/stylesheets/globals/_grid.css.scss
@@ -13,8 +13,7 @@ $columns: 12;
 }
 
 // Set $total-width to 100% for a fluid layout
-$total-width: 100%;
-// $total-width: gridsystem-width($columns);
+$total-width: gridsystem-width($columns);
 
 // Uncomment these two lines and the star-hack width/margin lines below to enable sub-pixel fix for IE6 & 7. See http://tylertate.com/blog/2012/01/05/subpixel-rounding.html
 // $min-width: 999999;
