--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -27,9 +27,6 @@
 
 // Navigation
 header {
-  .row {
-    padding-bottom: 0;
-  }
   height: $headerHeight;
   nav {
     height: $headerHeight;
@@ -80,18 +77,6 @@ header {
 #home {
   section {
     &:first-child {
-      h1 {
-        font-size:1.85rem;
-        font-weight: bold;
-      }
-      .button {
-        display: block;
-        font-size:1.5rem;
-        margin-bottom: 1rem;
-        text-shadow: 0 2px darken($primaryColor, 15%);
-      }
-    }
-    &:last-child {
       background:$secondaryColor;
       .image {
         img {
@@ -102,14 +87,54 @@ header {
           margin:0 auto;
         }
       }
-      h2 {
+      h1 {
         margin: 2rem 0 1rem;
         font-weight: bold;
+        font-size: 1.5rem;
       }
-      p, h2, h3 {
+      p, h1, h3 {
         color: white;
         display: inline-block;
         width: 100%;
+      }
+      .button {
+        display: block;
+        font-size:1.5rem;
+        margin-bottom: 1rem;
+        text-shadow: 0 2px darken($primaryColor, 15%);
+      }
+    }
+    &:nth-child(2) {
+      .row {
+        div {
+          @include clearfix;
+          display: block;
+          h2 {
+            font-size: 1.5rem;
+            border-bottom: 2px dotted #ccc;
+            padding-bottom: 0.5rem;
+          }
+          img {
+            width: 20%;
+            max-width: 6rem;
+            float: left;
+            display: inline-block;
+            margin-right: 5%;
+            @media screen and (min-width: 570px) { position:relative; left:5%; }
+          }
+          p {
+            width: 75%;
+            float: right;
+            display: inline-block;
+            @media screen and (min-width: 570px) { font-size:1.25rem; }
+          }
+        }
+      }
+    }
+    &:last-child {
+      h1 {
+        font-size:1.85rem;
+        font-weight: bold;
       }
       .button {
         display: block;
@@ -122,15 +147,6 @@ header {
   @media screen and (min-width: 768px) {
     section {
       &:first-child {
-        h1 {
-          font-size:2.25rem;
-        }
-        .button {
-          display: inline-block;
-          padding:1rem 4rem;
-        }
-      }
-      &:last-child {
         .image {
           float: left;
           width: 50%;
@@ -143,15 +159,47 @@ header {
           float: right;
           width: 48%;
           padding-left: 1rem;
-          h2 {
-            margin-top: 4.5rem;
-          }
-          p, h2, h3 {
+          h1 {
+            font-size: 2.45rem;
+            margin-top: 4rem;
           }
           .button {
             display: inline-block;
             padding:1rem 4rem;
           }
+        }
+      }
+      &:nth-child(2) {
+        .row {
+          div {
+            &:nth-child(2) {
+              margin:0 2%;
+            }
+            width: 31.5%;   
+            display: inline-block;
+            img {
+              width: 30%;
+              max-width: 6rem;
+              float: left;
+              display: inline-block;
+              margin-right: 10%;
+            }
+            p {
+              width: 60%;
+              float: right;
+              font-size: 1rem;
+              display: inline-block;
+            }
+          }
+        }
+      }
+      &:last-child {
+        h1 {
+          font-size:2.25rem;
+        }
+        .button {
+          display: inline-block;
+          padding:1rem 4rem;
         }
       }
     }  
