--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,16 +1,27 @@
 #home
   %section
     .row
-      %h1 Front End Web Developer &amp; Designer
-      %p
-        I am located in Pittsburgh, PA currently learning Ruby on Rails. I have experience in most current frameworks including bootstrap, foundation and the semantic grid system. I feel obligated to stay up-to-date on ALL of the latest design and development trends on the internet to effectively keep my projects fresh and future proof. My goal is to be an asset to you or your company and wear multiple hats to help streamline projects.
-      = link_to "Hire me today", contact_path, {:class => "button depth"}
-  %section
-    .row
       .image
         = image_tag("center.png")
       .content
-        %h2 Development &amp; Design
+        %h1 Local Pittsburgh Front End Web Developer &amp; Designer
         %p 
-          Coming from a design background with development experience I excel in user interface design and current web trends. I am located in Pittsburgh, PA currently learning Ruby on Rails. I have experience in most current frameworks.
-        = link_to "I'm your next asset", contact_path, {:class => "button depth"}
+          I am located in Pittsburgh, PA currently learning Ruby on Rails. I have experience in most current frameworks including bootstrap, foundation and the semantic grid system. 
+        = link_to "Hire me today", contact_path, {:class => "button depth"}
+  %section
+    .row
+      %div
+        %h2 Web Design
+        = image_tag("webdev.png")
+        %p
+          I create engaging mobile, tablet, and desktop experiences. This is my how I spend my evenings. 
+      %div
+        %h2 Identity &amp; Logo design
+        = image_tag("branding.png")
+        %p
+          A logo is just like a person. In a nutshell, what a logo means is more important than what it looks like.
+      %div
+        %h2 Mobile First
+        = image_tag("mobile.png")
+        %p
+          Developing and designing for mobile devices should start on your phone and end on your desktop. 
