--- a/app/views/static_pages/resume.html.haml
+++ b/app/views/static_pages/resume.html.haml
@@ -1,21 +1,22 @@
 #resume
   %section
     .row
-      %h1 Summary
-      %p
-        I am a front end developer by day... and a front end developer by night. My profession is my passion and way of life. I do not consider what I do a job. I continue working on personal projects after my normal work day. I strive to be challenged and am very self motivated. I am currently learning Ruby on Rails and have experience in most current frameworks including bootstrap, foundation and the semantic grid system. I feel obligated to stay up-to-date on ALL of the latest design and development trends on the internet to effectively keep my projects fresh and future proof. My goal is to be an asset to your company and wear multiple hats and help streamline projects.
-      %h4
-        Skills and Qualifications
-      %ul
-        %li Understanding of mobile development with a focus on responsive web design and mobile first approach.
-        %li Excellent understanding of designing user experiences and interfaces with a passion for usability and accessibility.
-        %li Mastery of the Photoshop, Illustrator and Indesign as well as typography.
-        %li Proficient with latest W3C standards, HTML5 and CSS3.
-        %li Jr. Ruby on Rails skillsets working with Ruby 1.93 and Rails 3. Also experience using Ruby 2 and Rails 4.
-        %li Working experience using Foundation, Bootstrap and The Semantic Grid System.
+      %div
+        .image
+          = image_tag("me.jpg")
+        .information
+          %h1
+            Bruce McElroy
+          %h2
+            Front End Web Designer
+          %p
+            I am a front end developer by day... and a front end developer by night. My profession is my passion and way of life. I do not consider what I do a job. I continue working on personal projects after my normal work day. I strive to be challenged and am very self motivated. My goal is to be an asset to your company and wear multiple hats and help streamline projects.
+          %a{href: "https://docs.google.com/file/d/0B5QFoIcx46DVWlhfdGFGb0x5cm8/edit?usp=sharing", :class => "button depth", :target => "_blank"}
+            %i.icon-cloud-download
+            Download my resume
+        
   %section
     .row
-      %h1 Experience
       %div
         %h2 Front End Web Designer
         %h3 @ PPG Industries
@@ -57,4 +58,13 @@
         %ul
           %li Designed posters, displays and signage for student activities
           %li Created certificates, produced event directories and photographed school events
+      / %h4
+      /   Skills and Qualifications
+      / %ul
+      /   %li Understanding of mobile development with a focus on responsive web design and mobile first approach.
+      /   %li Excellent understanding of designing user experiences and interfaces with a passion for usability and accessibility.
+      /   %li Mastery of the Photoshop, Illustrator and Indesign as well as typography.
+      /   %li Proficient with latest W3C standards, HTML5 and CSS3.
+      /   %li Jr. Ruby on Rails skillsets working with Ruby 1.93 and Rails 3. Also experience using Ruby 2 and Rails 4.
+      /   %li Working experience using Foundation, Bootstrap and The Semantic Grid System.
 
