--- a/app/views/layouts/includes/_footer.html.haml
+++ b/app/views/layouts/includes/_footer.html.haml
@@ -9,15 +9,14 @@
           %i.icon-facebook-sign
         %a{:href => "https://github.com/visualbam", :target => "_blank", :title => "Facebook-social"}
           %i.icon-github-sign
+        %a{:href => "http://dribbble.com/visualbam", :target => "_blank", :title => "Facebook-social"}
+          %i.icon-dribbble
         %a{:href => "http://www.linkedin.com/in/brucemcelroy", :target => "_blank", :title => "Facebook-social"}
           %i.icon-linkedin-sign
-        %a{:href => "http://instagram.com/visualbam", :target => "_blank", :title => "Facebook-social"}
-          %i.icon-twitter-sign
       %div
         %h6 Web design blogs for inspiriation —
         %a{:href => "http://www.webdesignerdepot.com", :target => "_blank"} Web Designer Depot
         %a{:href => "http://abduzeedo.com/", :target => "_blank"} Abduzeedo
-        %a{:href => "http://www.webdesignerdepot.com", :target => "_blank"} webdesignerdepot.com
         %a{:href => "http://www.webdesignerdepot.com", :target => "_blank"} webdesignerdepot.com
       %div
         %h6 Tell me what you think!
