--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -7,14 +7,15 @@
         %h1 Local Pittsburgh Front End Web Developer &amp; Designer
         %p 
           I am located in Pittsburgh, PA currently learning Ruby on Rails. I have experience in most current frameworks including bootstrap, foundation and the semantic grid system. 
-        = link_to "Hire me today", contact_path, {:class => "button depth"}
+        = link_to "Hire me today", resume_path, {:class => "button depth"}
+          
   %section
     .row
       %div
         %h2 Web Design
         = image_tag("webdev.png")
         %p
-          I create engaging mobile, tablet, and desktop experiences. This is my how I spend my evenings. 
+          I create engaging mobile, tablet, and desktop experiences. This is how I spend my evenings. 
       %div
         %h2 Identity &amp; Logo design
         = image_tag("branding.png")
