--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -184,13 +184,16 @@ ol { margin-#{$defaultFloat}: 20px;
 
 // buttons
 .button {
-  color: #FFFFFF; 
+  color: #FFFFFF;
+  cursor: pointer; 
   font-size: 1rem;
   padding: 1rem;
   margin: 0 auto;
   text-align: center;
   border-radius: 0.25rem;
   transition: all 0.2s ease;
+  display: inline-block;
+  position:relative;
 }
 
 // Button Depth
