--- a/app/views/layouts/includes/_nav.html.haml
+++ b/app/views/layouts/includes/_nav.html.haml
@@ -3,13 +3,12 @@
     %nav
       = link_to(image_tag("logo.svg", :alt => "Bruce McElroy Logo", :rel => "logo"), root_path)
       %ul
-        %li
-          = link_to  "Resume", resume_path, {:title => "Resume"}
-        %li
-          = link_to "Portfolio", portfolio_path, {:title => "Portfolio"}
+        %li= link_to  "Home", root_path, {:title => "Resume"}
+        %li= link_to  "Resume", resume_path, {:title => "Resume"}
+        %li= link_to "Portfolio", portfolio_path, {:title => "Portfolio"}
         -#
           %li
             = link_to "Blog", articles_path, {:title => "Blog"}
-        %li
-          = link_to "Connect", contact_path, {:title => "Contact"}
-     
+          %li
+            = link_to "Connect", contact_path, {:title => "Contact"}
+       
