--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -9,7 +9,7 @@
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url("/assets/portfolio/spinner.gif") 50% 50% no-repeat #000000;
+  background: url(image_path("spinner.gif")) 50% 50% no-repeat #000000;
 }
 
 .email {
