--- a/app/views/static_pages/portfolio.html.haml
+++ b/app/views/static_pages/portfolio.html.haml
@@ -3,10 +3,9 @@
     .row
       .content
         %h1 Hello there,
-        %p.subheader 
-          I am Bruce McElroy. Positive Thinker, UI/UX Junkie, Designer and Dog Lover. I do what I do because I love making people happy. While you're here browse 
-          = link_to "my blog", articles_path 
-          or view my <a href="http://instagram.com/visualbam" target="_blank"> Instagram&nbsp;shots.</a> And if nothing else, go get inspired.
+        %p 
+          I am Bruce McElroy. Positive Thinker, UI/UX Junkie, Designer and Dog Lover. I do what I do because I love making people happy.
+        %a{class: "button depth", href: "http://instagram.com/visualbam", target: "_blank"} View my instagram shots!
   %section
     .row
       %div
