--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,28 +1,23 @@
 #home
   %section
     .row
-      .image
-        = image_tag("center.png")
+      .image= image_tag("center.png")
       .content
         %h1 Local Pittsburgh Front End Web Developer &amp; Designer
         %p 
           I am located in Pittsburgh, PA currently learning Ruby on Rails. I have experience in most current frameworks including bootstrap, foundation and the semantic grid system. 
-        = link_to "Hire me today", resume_path, {:class => "button depth"}
-          
+        = link_to "Hire me today", resume_path, {:class => "button depth"}   
   %section
     .row
       %div
         %h2 Web Design
         = image_tag("webdev.png")
-        %p
-          I create engaging mobile, tablet, and desktop experiences. This is how I spend my evenings. 
+        %p I create engaging mobile, tablet, and desktop experiences. This is how I spend my evenings. 
       %div
         %h2 Identity &amp; Logo design
         = image_tag("branding.png")
-        %p
-          A logo is just like a person. In a nutshell, what a logo means is more important than what it looks like.
+        %p A logo is just like a person. In a nutshell, what a logo means is more important than what it looks like.
       %div
         %h2 Mobile First
         = image_tag("mobile.png")
-        %p
-          Developing and designing for mobile devices should start on your phone and end on your desktop. 
+        %p Developing and designing for mobile devices should start on your phone and end on your desktop. 
