--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -81,6 +81,9 @@ header {
   section {
     &:first-child {
       background:$secondaryColor;
+      background:url(image_path("dark_geometric_@2X.png"));
+      border-bottom:1rem solid  black;
+      border-top:1rem solid  black;
       .image {
         img {
           width: 100%;
@@ -216,6 +219,9 @@ header {
   section {
     &:first-child {
       background:$secondaryColor;
+      background:url(image_path("dark_geometric_@2X.png"));
+      border-bottom:1rem solid  black;
+      border-top:1rem solid  black;
       color: lighten($secondaryColor, 40%);
       h1, h2 {
         color: white;
@@ -242,7 +248,8 @@ header {
             margin: 1rem auto 2rem;
             border-radius: 100%;
             overflow: hidden;
-            border:0.5rem solid white;
+            border: 1rem solid rgb(255, 255, 255);
+            border: 1rem solid rgba(255, 255, 255, .05);
             img {
               width: 100%;
             }
