Updated bundle and added branding brand to resume page

--- a/app/views/static_pages/resume.html.haml
+++ b/app/views/static_pages/resume.html.haml
@@ -17,6 +17,15 @@
   %section
     .row
       %div
+        %h2 Front End Web Developer
+        %h3 @ Brandingbrand
+        %span November 2013 – Pittsburgh Area
+        %ul
+          %li First pass design integration 
+          %li Web development using node.js and ember.js
+          %li Custom feature development
+          %li Maintaining best practices
+      %div
         %h2 Front End Web Designer
         %h3 @ PPG Industries
         %span August 2012 – Pittsburgh Area
