--- a/app/views/static_pages/resume.html.haml
+++ b/app/views/static_pages/resume.html.haml
@@ -19,7 +19,7 @@
       %div
         %h2 Front End Web Developer
         %h3 @ Brandingbrand
-        %span November 2013 – Pittsburgh Area
+        %span November 2013 - August 2014 | Pittsburgh Area
         %ul
           %li First pass design integration 
           %li Web development using node.js and ember.js
@@ -28,7 +28,7 @@
       %div
         %h2 Front End Web Designer
         %h3 @ PPG Industries
-        %span August 2012 – Pittsburgh Area
+        %span August 2012 – November 2013 | Pittsburgh Area
         %ul
           %li Update and maintain corporate websites
           %li Web development using Visualstudio .NET/Azure
@@ -37,7 +37,7 @@
       %div
         %h2 Front End Web Designer
         %h3 @ Machovy.com
-        %span August 2012 – Present | Pittsburgh PA
+        %span August 2012 – January 2014 | Pittsburgh PA
         %ul
           %li Brand Development and identity
           %li Website traffic growth and marketing
