removed image links

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -219,6 +219,9 @@ header {
         
 // Resume
 #resume, #portfolio {
+  .images a {
+    pointer-events: none;
+  }
   section {
     &:first-child {
       background:$secondaryColor;
