--- a/app/views/static_pages/portfolio.html.haml
+++ b/app/views/static_pages/portfolio.html.haml
@@ -6,7 +6,7 @@
         %p 
           I am Bruce McElroy. Positive Thinker, UI/UX Junkie, Designer and Dog Lover. I do what I do because I love making people happy.
         %a{class: "button depth", href: "http://instagram.com/visualbam", target: "_blank"} View my instagram shots!
-  %section
+  %section.images
     .row
       %div
         = link_to (image_tag("portfolio/img1.jpg"))
