Updated resume download

--- a/app/views/static_pages/resume.html.haml
+++ b/app/views/static_pages/resume.html.haml
@@ -11,7 +11,7 @@
             Front End Web Designer
           %p
             I am a front end developer by day... and a front end developer by night. My profession is my passion and way of life. I do not consider what I do a job. I continue working on personal projects after my normal work day. I strive to be challenged and am very self motivated. My goal is to be an asset to your company and wear multiple hats and help streamline projects.
-          %a{href: "https://docs.google.com/file/d/0B5QFoIcx46DVWlhfdGFGb0x5cm8/edit?usp=sharing", :class => "button depth", :target => "_blank"}
+          %a{href: "https://www.dropbox.com/s/fnkiwvn9naj8aka/Bruce-McElroy-Resume.pdf", :class => "button depth", :target => "_blank"}
             %i.icon-cloud-download
             Download my resume
   %section
