--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,25 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title><%= content_for?(:title) ? yield(:title) : "Bruce McElroy | Frontend Web Developer | Pittsburgh" %></title>
+
+    <%= stylesheet_link_tag    "application", media: "all" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
+    <%= csrf_meta_tags %>
+  </head>
+
+  <body>
+
+    <%= yield %>
+    <div id="ember-app"></div>
+    <%= javascript_include_tag "application" %>
+  </body>
+</html>
+
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>EmberCrm</title>
@@ -12,4 +33,4 @@
 <div id="ember-app"></div>
 
 </body>
-</html>
+</html> -->
