--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -115,7 +115,7 @@ $body-bg: white;
 
 // We use these as default colors throughout
 $primary-color: #35b9ff;
-$secondary-color: #444445;
+$secondary-color: #383d40;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
