--- a/app/assets/stylesheets/partials/resume.css.scss
+++ b/app/assets/stylesheets/partials/resume.css.scss
@@ -3,15 +3,21 @@
 }
 
 .jobs {
-  display: flex;
+  background: white;
   height: auto;
+  overflow: hidden;
   h1 {
     color: $primary-color;
   }
   .list {
     background: darken($silver, 75%);
     margin: 0;
-    width: 25%;
+    width: 100%;
+    @media only screen and (min-width: 40.063em) {
+      width: 25%;
+      display: inline-block;
+      float: left;
+    }
     li {
       border-bottom: 1px solid darken($silver, 80%);
       color: darken($silver, 20%);
@@ -43,11 +49,16 @@
     }
   }
   .description {
-    background: white;
     min-height: 240px;
-    padding: 1.5rem 1.5rem 1.5rem 2.5rem;
+    padding: 1rem;
     position: relative;
-    width: 75%;
+    width: 100%;
+    @media only screen and (min-width: 40.063em) {
+      display: inline-block;
+      width: 75%;
+      float: left;
+      padding: 1.5rem 1.5rem 1.5rem 2.5rem;
+    }
     h3 {
       color: $primary-color;
       margin: 0;
