--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,16 +30,34 @@
 section.support {
   background: $secondary-color;
   padding: 0;
-  h2  {
+  h5  {
     margin-top: 1rem;
+    font-weight: bold;
   }
-  h2, p {
+  h5, p {
     color: #5e6264;
+    text-align: center;
+    @media only screen and (min-width: 40.063em) {
+      text-align: left;
+    }
   }
   img {
-    width: 50%;
-    margin: 0 auto;
+    width: 30%;
+    margin: 1rem auto;
     display: block;
+  }
+  .item {
+    padding: 1.5rem 0;
+    transition: all 0.5s ease-in-out;
+    @media only screen and (min-width: 40.063em) {
+      padding: 1rem;
+    }
+    &:nth-child(even) {
+      background-color: darken($secondary-color, 2%);
+    }
+    &:hover {
+      background-color: darken($secondary-color, 5%);
+    }
   }
   .tabs-content {
     margin: 0;
@@ -72,14 +90,28 @@ section.support {
 }
 
 
-.intro {
+section.intro {
   background: $primary-color;
+  padding: 4rem 0;
   h2 {
     font-weight: 100;
     color: white;
     line-height: 1.25;
     span {
       font-weight: bold;
+      font-size: rem-calc(22);
+      @media only screen and (min-width: 40.063em) {
+        width: 100%;
+        font-size: rem-calc(42);
+      }
+    }
+  }
+  img {
+    width: 75%;
+    margin: 0 auto;
+    display: block;
+    @media only screen and (min-width: 40.063em) {
+      width: 85%;
     }
   }
   a {
