--- a/app/views/layouts/includes/_footer.html.haml
+++ b/app/views/layouts/includes/_footer.html.haml
@@ -6,7 +6,7 @@
         = image_tag("logo-footer.svg", :alt => "Bruce McElroy Logo", :rel => "logo")
         %p My goal is to provide you with a service as a front end web developer that exceeds your expectations in a timely fashion. 
         %a{:href => "https://www.facebook.com/bruce.a.mcelroy", :target => "_blank", :title => "Facebook-social"}
-          %i.icon-facebook-sign
+          %i.fa.fa-facebook-square
         %a{:href => "https://github.com/visualbam", :target => "_blank", :title => "Facebook-social"}
           %i.icon-github-sign
         %a{:href => "http://dribbble.com/visualbam", :target => "_blank", :title => "Facebook-social"}
