--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,9 @@
+// Foundation
 @import "foundation_and_overrides";
+
+// Font Awesome
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 // Partials
 @import "partials/header";
@@ -37,6 +42,7 @@ section.support {
   h5, p {
     color: #5e6264;
     text-align: center;
+    transition: all 0.75s ease-in-out;
     @media only screen and (min-width: 40.063em) {
       text-align: left;
     }
@@ -57,6 +63,9 @@ section.support {
     }
     &:hover {
       background-color: darken($secondary-color, 5%);
+      h5, p {
+        color: $primary-color;
+      }
     }
   }
   .tabs-content {
