--- a/app/assets/stylesheets/partials/footer.css.scss
+++ b/app/assets/stylesheets/partials/footer.css.scss
@@ -1,4 +1,25 @@
 footer {
   background: white;
   padding-top: 1rem;
+  img {
+    width: 10rem;
+    display: block;
+    margin: 0 2rem 1rem 0;
+    @media only screen and (min-width: 40.063em) {
+      display: inline-block;
+    }
+  }
+  p {
+    color: $iron;
+    font-size: rem-calc(14);
+  }
+  a {
+    color: $iron;
+    vertical-align: middle;
+  }
+  .fa {
+    font-size: 2rem;
+    margin: 0 1rem 1rem 0;
+    transition: all 0.5s ease-in-out;
+  }
 }
