--- a/app/assets/stylesheets/partials/tapdat.css.scss
+++ b/app/assets/stylesheets/partials/tapdat.css.scss
@@ -4,7 +4,7 @@ section.tapdat {
   header {
     background: #605461;
     margin-top: -2rem;
-    padding: 3rem;
+    padding: 3rem 0;
     img {
       margin: 0 auto;
       display: block;
