--- a/app/assets/stylesheets/partials/tapdat.css.scss
+++ b/app/assets/stylesheets/partials/tapdat.css.scss
@@ -48,7 +48,7 @@ section.tapdat {
       }
     }
     .img-container {
-      padding: 4rem;
+      padding: 4rem 0;
       img {
         margin: 0 auto;
         display: block;
